--- a/app/admin/webapp/i18n/i18n.properties
+++ b/app/admin/webapp/i18n/i18n.properties
@@ -11,6 +11,18 @@ appDescription=An SAP Fiori application.
 #XTIT: Main view title
 title=App Title
 
+#XTXT: Text for save
+save=Salvar
+
+#XTXT: Text for edit
+edit=Editar
+
+#XTXT: Text for delete
+delete=Deletar
+
+#XTXT: Text for cancel
+cancel=Cancelar
+
 #~~~ Home View ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 #XIMG: ok go
@@ -45,3 +57,28 @@ supplierTitle=Fornecedores
 
 #XTXT: Text in the supplier cell
 supplierContent= Gestão de Fornecedores
+
+#~~~ User View ~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+#XTXT: Text User List
+usersList=Lista de Usuários
+
+#XTXT: Text Manager User
+manageUsers=Gerênciar Usuários
+
+#XTXT: Text Add User
+addUsers=Adicionar Usuário
+
+#XTXT: Text New User
+newUser=Novo Usuário
+
+#XTXT: Error User Create
+systemErrorCreateUser=Ocorreram erros ao salvar o Usuário, para mais informações verifique as mensagens
+
+#XTXT: Text Add User
+usersCreateSubtitle=Preencha os campos obrigatórios e personalize as informações conforme necessário
+
+#XTXT: Text UserDetail
+userDetail=Detalhes do Usuário
+
+
