api and ajustes

--- a/app/admin/webapp/i18n/i18n.properties
+++ b/app/admin/webapp/i18n/i18n.properties
@@ -70,7 +70,7 @@ manageUsers=Gerênciar Usuários
 addUsers=Adicionar Usuário
 
 #XTXT: Text New User
-newUser=Novo Usuário
+newUser=Cadastro de Usuário
 
 #XTXT: Error User Create
 systemErrorCreateUser=Ocorreram erros ao salvar o Usuário, para mais informações verifique as mensagens
